k8s/ingress/ingress-route-service-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
  namespace: service-a
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /service-a
        pathType: Exact
        backend:
          service:
            name: service-a
            port:
              number: 80
