k8s/ingress/ingress-route-service-b.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-b-ingress
  namespace: service-b
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /service-b
        pathType: Exact
        backend:
          service:
            name: service-b
            port:
              number: 80
